<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#028BD1"
        android:padding="16dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/name"
            android:inputType="textCapWords" />

        <!--QuestionOne-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/question_one"
                android:textSize="20sp"
                android:textColor="@android:color/white" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/question_one_option_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textSize="16sp"
                    android:text="@string/question_one_option_a"
                    android:textColor="@android:color/white" />

                <RadioButton
                    android:id="@+id/question_one_option_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textSize="16sp"
                    android:text="@string/question_one_option_b"
                    android:textColor="@android:color/white" />

                <RadioButton
                    android:id="@+id/question_one_option_c"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textSize="16sp"
                    android:text="@string/question_one_option_c"
                    android:textColor="@android:color/white" />

                <RadioButton
                    android:id="@+id/question_one_option_d"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textSize="16sp"
                    android:text="@string/question_one_option_d"
                    android:textColor="@android:color/white"
                    android:onClick="onQuestionOneClicked" />



            </RadioGroup>

        </LinearLayout>

        <!--QuestionTwo-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/question_two"
                android:textSize="20sp"
                android:textColor="@android:color/white" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/question_two_option_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textSize="16sp"
                    android:text="@string/question_two_option_a"
                    android:textColor="@android:color/white" />

                <RadioButton
                    android:id="@+id/question_two_option_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textSize="16sp"
                    android:text="@string/question_two_option_b"
                    android:textColor="@android:color/white" />

                <RadioButton
                    android:id="@+id/question_two_option_c"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textSize="16sp"
                    android:text="@string/question_two_option_c"
                    android:textColor="@android:color/white"
                    android:onClick="onQuestionTwoClicked" />

                <RadioButton
                    android:id="@+id/question_two_option_d"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textSize="16sp"
                    android:text="@string/question_two_option_d"
                    android:textColor="@android:color/white" />

            </RadioGroup>

        </LinearLayout>

        <!--QuestionThree-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/question_three"
                android:textSize="20sp"
                android:textColor="@android:color/white" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/question_three_option_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textSize="16sp"
                    android:text="@string/question_three_option_a"
                    android:textColor="@android:color/white" />

                <RadioButton
                    android:id="@+id/question_three_option_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textSize="16sp"
                    android:text="@string/question_three_option_b"
                    android:textColor="@android:color/white"
                    android:onClick="onQuestionThreeClicked" />

                <RadioButton
                    android:id="@+id/question_three_option_c"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textSize="16sp"
                    android:text="@string/question_three_option_c"
                    android:textColor="@android:color/white"
                    />

                <RadioButton
                    android:id="@+id/question_three_option_d"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textSize="16sp"
                    android:text="@string/question_three_option_d"
                    android:textColor="@android:color/white" />

            </RadioGroup>

        </LinearLayout>
        <!--QuestionFour-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/question_four"
                android:textSize="20sp"
                android:textColor="@android:color/white" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/question_four_option_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textSize="16sp"
                    android:text="@string/question_four_option_a"
                    android:textColor="@android:color/white"
                    android:onClick="onQuestionFourClicked" />

                <RadioButton
                    android:id="@+id/question_four_option_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textSize="16sp"
                    android:text="@string/question_four_option_b"
                    android:textColor="@android:color/white" />

                <RadioButton
                    android:id="@+id/question_four_option_c"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textSize="16sp"
                    android:text="@string/question_four_option_c"
                    android:textColor="@android:color/white"
                    />

                <RadioButton
                    android:id="@+id/question_four_option_d"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textSize="16sp"
                    android:text="@string/question_one_option_d"
                    android:textColor="@android:color/white" />

            </RadioGroup>


        </LinearLayout>
        <!--QuestionFive-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/question_five"
                android:textSize="20sp"
                android:textColor="@android:color/white" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/question_five_option_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textSize="16sp"
                    android:text="@string/question_five_option_a"
                    android:textColor="@android:color/white" />

                <RadioButton
                    android:id="@+id/question_five_option_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textSize="16sp"
                    android:text="@string/question_five_option_b"
                    android:textColor="@android:color/white" />

                <RadioButton
                    android:id="@+id/question_five_option_c"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textSize="16sp"
                    android:text="@string/question_five_option_c"
                    android:textColor="@android:color/white"
                    />

                <RadioButton
                    android:id="@+id/question_five_option_d"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textSize="16sp"
                    android:text="@string/question_five_option_d"
                    android:textColor="@android:color/white"
                    android:onClick="onQuestionFiveClicked" />
            </RadioGroup>

        </LinearLayout>
        <!--QuestionSix-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginBottom="16dp"
                android:textSize="20sp"
                android:text="@string/question_six"
                android:textColor="@android:color/white" />

            <CheckBox
                android:id="@+id/question_six_true_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"
                android:text="@string/question_six_true_option"
                android:textColor="@android:color/white"
                android:onClick="onQuestionSixClicked"/>

            <CheckBox
                android:id="@+id/question_six_false_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"
                android:text="@string/question_six_false_option"
                android:textColor="@android:color/white" />




        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:padding="16dp"
            android:background="@android:color/darker_gray">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_text"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:textSize="20sp"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/score_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:textSize="20sp"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@android:color/black" />


        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray"
            android:onClick="submitQuiz"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/submit" />

    </LinearLayout>

</ScrollView>